--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "medium-ng",
   "version": "0.0.0",
   "scripts": {
+    "prepare": "husky install",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "format": "prettier --config ./.prettierrc.js --ignore-path ./.prettierignore --write \"**/*.{ts,tsx,js,jsx,md}\""
   },
   "private": true,
   "dependencies": {
@@ -26,7 +27,9 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/jasmine": "~4.3.0",
+    "husky": "^8.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
