--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
     "immer": "^9.0.21",
+    "query-string": "^8.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zod": "^3.21.4",
