--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngrx/router-store": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "TagCloud": "^2.3.2",
     "immer": "^9.0.21",
     "query-string": "^8.1.0",
     "rxjs": "~7.8.0",
